Fix required fields spacing

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -372,6 +372,14 @@ a.product__text {
   margin-bottom: 1.5rem;
 }
 
+.product-form__custom-fields .field {
+  margin-bottom: 1.2rem;
+}
+
+.product-form__custom-fields .field:last-child {
+  margin-bottom: 0;
+}
+
 .product-form__custom-fields .field__label span[aria-hidden] {
   color: rgb(var(--color-foreground));
   margin-left: 0.2rem;
